@@ -1,14 +1,18 @@
 from .proxy import proxy, readOnlyError
 
 def createSafeModule(real_module, attributes):
-    attributes = tuple(attributes) + ('__file__',)
+    attributes = set(attributes)
 
     name_repr = repr(real_module.__name__)
-    if hasattr(real_module, '__file__'):
-        attributes += ('__file__',)
-        name_repr += " from %r" % real_module.__file__
-    else:
+    try:
+        module_file = real_module.__file__
+    except AttributeError:
         name_repr += " (built-in)"
+    else:
+        name_repr += " from %r" % module_file
+        attributes.add('__file__')
+
+    attributes = frozenset(attributes)
 
     class SafeModule(object):
         __doc__ = real_module.__doc__
@@ -17,6 +21,9 @@ def createSafeModule(real_module, attributes):
 
         def __delattr__(self, name):
             readOnlyError()
+
+        def __dir__(self):
+            return list(sorted(attributes))
 
         def __getattr__(self, name):
             if type(name) is not str:
@@ -40,10 +47,10 @@ def _safe_import(__import__, module_whitelist):
     """
     def safe_import(name, globals={}, locals={}, fromlist=[], level=-1):
         try:
-            whitelist = module_whitelist[name]
+            attributes = module_whitelist[name]
         except KeyError:
             raise ImportError('Import "%s" blocked by the sandbox' % name)
         module = __import__(name, globals, locals, fromlist, level)
-        return createSafeModule(module, whitelist)
+        return createSafeModule(module, attributes)
     return safe_import
 
